[package]
name = "goxoy-address-parser"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Goxoy/goxoy-address-parser/"
keywords = ["ip-parser","ip-address-parser"]
description = "Goxoy Address Parser"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
